[package]
name = "kvs"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
test = false

[[bin]]
name = "kvs"
test = false

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "2.33.0"
structopt = "0.3"
failure = "0.1.8"
failure_derive = "0.1.8"
